<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AddressBook</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phoneTypeHome">Home</string>
    <string name="phoneTypeMobile">Mobile</string>
    <string name="phoneTypeOther">Other</string>
    <string name="phoneTypeWork">Work</string>
    <string name="confirmDelete">Do you really wish to delete this item?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
</resources>
