<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.citadel.tyler.addressbook.add">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:id="@+id/editName"
        android:layout_gravity="left|top" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editPhone"
        android:layout_gravity="left|center_vertical" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|bottom"
        android:id="@+id/radioType">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneTypeHome"
            android:id="@+id/radioHome" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneTypeMobile"
            android:id="@+id/radioMobile" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneTypeOther"
            android:id="@+id/radioOther" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneTypeWork"
            android:id="@+id/radioWork" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/buttonSubmit"
        android:layout_gravity="center_horizontal|bottom" />

</FrameLayout>
